fixed background image not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body, html{
 
 .bg{
     height: 100%;
-    background-image: url('/assets/images/background.jpg');
+    background-image: url('../images/background.jpg');
     background-size: 180%;
     background-repeat: no-repeat;
     background-position: center;
